<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <LinearLayout
        android:id="@+id/logInLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="338dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/logInTextView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="80dp"
            android:gravity="center_horizontal"
            android:text="@string/login_pass"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/logInEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="logInPassword"
            android:text="@string/logInUsingPassword" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="logInBiometric"
            android:text="@string/logInUsingFingerprint" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>