<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePasswordActivity">

    <LinearLayout
        android:id="@+id/createPasswordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/createPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_horizontal"
            android:text="@string/create_pass"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/createPasswordSmallTextView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="80dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="20dp"
            android:text="@string/create_pass_message"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/createPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="createPassButtonFunc"
            android:text="CREATE AND LOG IN" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>